--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "node mysql api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "launch": "tsc && node dist/index.js"
   },
   "author": "mirko wlk",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
