--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "launch": "tsc && node dist/index.js"
+    "launch": "tsc && node dist/index.js",
+    "launch:dev": "tsc && concurrently  \"tsc -w\" \"nodemon dist/index.js\""
   },
   "author": "mirko wlk",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   }
 }
